--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-api",
   "version": "1.0.0",
   "main": "index.js",
-  "description": "The Weather API",
+  "description": "The Weather API- week 5",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
