--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-api",
+  "name": "weather-api-week5",
   "version": "1.0.0",
   "main": "index.js",
   "description": "The Weather API- week 5",
