--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.2.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
     "nodemon": "^3.1.9",
     "npm-run-all": "^4.1.5",
